feat:add methods teacherUseCasesImpl